    - Bumped Blueprint Tools to latest version.
    - Bumped Factory Planner to latest version. Mod settings can no longer be set via modpack (default timescale).
    - Bumped Ghost Counter to latest version.
    - Bumped Bottleneck Lite to latest version.
    - Bumped Color Coded Planners to latest version.
    - Bumped Construction Planner Continued to latest version.
    - Enable use of artillery cluster remote for singular shots.
    - Modpack controls configuration for Blueprint Tools. SHIFT + arrows for nudging the blueprint, CONTROL + arrows for nudging blueprint grid, and CONTROL + SHIFT + arrow for nudging blueprint book grid.
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-07-26
  Features:
    - Improved visibility for power switch and train stop status light indicators (via "Big Light")
    - Quicker map tagging using right-click (via "Quick Map Tag")
    - Thicker power cables and logic wires(via "Thicker Power Wires")
    - Show unfulfilled requests in the current logistic network (via "What's Missing?")
    - Rename locomotives, labs, roboports, and radars (via "Renamer")
    - Pick-up leftover items alongside inserters (via "Pick It Up")
    - Automatically fill buildings and vehicles with fuel when placing them down (via "Fill4Me")
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-20
  Changes:
    - Replaced "Construction Planner" with "Construction Planner Continued" mod. Although it should be a drop-in replacement, make sure to backup the savegame before updating the modpack.
    - Replaced "Quick Swap" with "Quickbar Vertical Swap" mod. Provides more features, and preserves blueprints on the quickbar (by default).
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2022-07-15
  Changes: