@@ -13,8 +13,10 @@ Date: 9999-99-99
     - Bumped Bottleneck Lite to latest version.
     - Bumped Color Coded Planners to latest version.
     - Bumped Construction Planner Continued to latest version.
+    - Bumped Cursor Enhancements to latest version.
     - Enable use of artillery cluster remote for singular shots.
     - Modpack controls configuration for Blueprint Tools. SHIFT + arrows for nudging the blueprint, CONTROL + arrows for nudging blueprint grid, and CONTROL + SHIFT + arrow for nudging blueprint book grid.
+    - Modpack controls configuration for Cursor Enhancements. Quick craft key binding is disabled (Crafting Tools provides for better quantity control).
   Features:
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
